# ab-analysis-kit

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  MANIFEST.in  PRINCIPLES.md  README.md  ROADMAP.md  package-lock.json  package.json  pyproject.toml  requirements.txt  setup.py
.claude/rules/: architecture.md  contributing.md
.github/workflows/: ci.yml  publish.yml  website.yml
abkit/: __init__.py
abkit/cli/: __init__.py  _output.py  main.py
abkit/compute/: __init__.py  incremental_backend.py  recompute_backend.py
abkit/config/: __init__.py  discovery.py  experiment_config.py  method_config.py  metric_config.py  profile.py  project_config.py  validator.py
abkit/core/: __init__.py  exposure_counting.py  interval.py  models.py  period_planner.py
abkit/database/: __init__.py  _sql_manager.py  clickhouse_manager.py  manager.py  mysql_manager.py  postgres_manager.py  tables.py
abkit/loaders/: __init__.py  exposure_copy.py  exposure_loader.py  exposure_source.py  metric_loader.py  query_template.py  state_loader.py
abkit/notify/: __init__.py  base.py  branding.py  email.py  factory.py  mattermost.py  mock.py  slack.py  telegram.py  webhook.py
abkit/pipeline/: __init__.py  _types.py  analyze.py  driver.py  enrich.py  readout.py  state.py
abkit/planning/: __init__.py  sizing.py
abkit/reporting/: __init__.py  builder.py  calibration.py  html_report.py
abkit/stats/: __init__.py  accumulate.py  base.py  correction.py  effects.py  exceptions.py  factory.py  power.py  registry.py  result.py  rng.py  samples.py  srm.py
abkit/tuning/: __init__.py  config_writer.py  html.py  payload.py  recompute.py  server.py  session.py
abkit/utils/: __init__.py  datetime_utils.py  env_interpolation.py  json_utils.py
abkit/validate/: __init__.py  _types.py  family.py  inject.py  load.py  panel.py  persistence.py  report.py  resample.py  result.py  run_id.py  runner.py  scoring.py  vector_resample.py
docs/: README.md
docs/design/: README.md  brand-tokens.md
docs/examples/: README.md
docs/getting-started/: installation.md  quickstart.md
docs/guides/: compute-methods.md  configuration.md  databases.md  experiments.md  explore.md  metrics.md  notification-channels.md  plan.md  reading-a-readout.md  sequential.md  validate.md  visualizing-results.md
docs/reference/: cli.md  internal-tables.md  legacy-method-catalogue.md  legacy_grafana_dashboard.json
docs/ru/: project-initiation-spec.md
docs/specs/: 00-overview.md  aa-false-positive-matrix.md  architecture.md  branding-and-site.md  cli-and-dx.md  cumulative-intervals.md  data-contract-and-reporting.md  declarative-config.md  m10-implementation-plan.md  m11-implementation-plan.md  m12-implementation-plan.md  m2-implementation-plan.md  m3-implementation-plan.md  m4-implementation-plan.md  m5-implementation-plan.md  m6-implementation-plan.md  m7-implementation-plan.md  m8-implementation-plan.md  m9-implementation-plan.md  quorum-review.md  statistics-baseline.md  statistics-changes.md
tests/: conftest.py  test_smoke.py
tests/_helpers/: fake_db.py  synthetic_ab.py
tests/cli/: test_cli.py  test_explore_command.py  test_init_claude.py  test_plan_command.py  test_run_report.py  test_test_report_command.py  test_validate_command.py
tests/compute/: test_incremental_backend.py  test_recompute_backend.py
tests/config/: test_discovery.py  test_experiment_config.py  test_method_config.py  test_metric_config.py  test_profile.py  test_project_config.py  test_validator.py  test_validator_l2.py
tests/core/: test_exposure_counting.py  test_interval.py  test_models.py  test_period_planner.py
tests/database/: test_clickhouse_manager.py  test_internal_tables.py  test_sql_managers.py  test_tables_contract.py
tests/docs/: test_docs_single_source.py
tests/e2e/: test_cohort_mode_parity.py  test_explore_session.py  test_first_report.py  test_first_run.py  test_first_run_clickhouse.py  test_first_run_copy_enabled.py  test_release_readiness.py  test_sequential_matrix.py  test_validate_matrix.py
tests/golden/: conftest.py  legacy_reference_bootstrap.py  legacy_reference_parametric.py  test_golden_bootstrap.py  test_golden_parametric.py  test_golden_power_correction.py
tests/loaders/: test_exposure_copy.py  test_exposure_source.py  test_loaders.py  test_query_template.py
tests/notify/: test_channels.py
tests/pipeline/: test_correction_rule.py  test_pipeline.py  test_readout.py  test_readout_sequential.py  test_state_stage.py
tests/planning/: test_sizing.py
tests/reporting/: conftest.py  test_bi_examples.py  test_builder.py  test_calibration.py  test_html_report.py
web/: build.mjs  package-lock.json  package.json  tsconfig.json
website/: .gitignore  Dockerfile  README.md  astro.config.mjs  nginx.conf  package.json
(+147 files in other folders)
