[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ab-analysis-kit"
dynamic = ["version"]
description = "A/B experiment analysis as declarative YAML + SQL"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "ab-analysis-kit authors"}
]
keywords = ["ab-testing", "experimentation", "statistics", "cuped", "bootstrap", "causal-inference", "clickhouse"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Information Analysis",
]

dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "statsmodels>=0.14.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "click>=8.0",
    "jinja2>=3.0",
    "orjson>=3.0",
    "requests>=2.25.0",
]

[project.optional-dependencies]
# Database drivers (ClickHouse-first; PostgreSQL/MySQL supported)
clickhouse = ["clickhouse-driver>=0.2.0"]
postgres = ["psycopg2-binary>=2.9.0"]
mysql = ["pymysql>=1.0.0"]
all-db = ["clickhouse-driver>=0.2.0", "psycopg2-binary>=2.9.0", "pymysql>=1.0.0"]

# Orchestration (the CLI is the unit of automation; abk itself never imports prefect)
orchestration = ["prefect>=2.0"]

# All runtime extras
all = [
    "clickhouse-driver>=0.2.0",
    "psycopg2-binary>=2.9.0",
    "pymysql>=1.0.0",
    "prefect>=2.0",
]

# Development dependencies
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.0",
    "requests-mock>=1.12",
    "black>=23.0",
    "mypy>=1.0",
    "ruff>=0.1.0",
]
# Integration tests (require Docker)
integration = [
    "testcontainers[clickhouse,postgres,mysql]>=4.0",
    "psycopg2-binary>=2.9.0",
    "pymysql>=1.0.0",
]

[project.scripts]
abk = "abkit.cli.main:cli"

[project.urls]
Homepage = "https://abkit.pipelab.dev"
Documentation = "https://abkit.pipelab.dev"
Repository = "https://github.com/alexeiveselov92/ab-analysis-kit"
Changelog = "https://github.com/alexeiveselov92/ab-analysis-kit/blob/main/CHANGELOG.md"
Issues = "https://github.com/alexeiveselov92/ab-analysis-kit/issues"

[tool.setuptools.dynamic]
version = {attr = "abkit.__version__"}

[tool.setuptools.packages.find]
where = ["."]
include = ["abkit*"]
exclude = ["tests*", "docs*", "website*"]

[tool.setuptools.package-data]
# Claude Code context shipped by `abk init-claude` (CLAUDE block, rules, skills).
"abkit.cli" = ["assets/**/*.md"]
# Pre-built self-contained HTML-report renderer bundle (shared with the website
# landing demo), inlined by `abk run --report`.
"abkit.reporting" = ["assets/*.js"]
# Pre-built interactive explore-cockpit renderer bundle, inlined by `abk explore`.
"abkit.tuning" = ["assets/*.js"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--strict-markers",
    "--tb=short",
    "--cov=abkit",
    "--cov-report=term-missing",
    "--cov-report=html",
]
markers = [
    "unit: Unit tests",
    "golden: Golden tests vs the captured legacy engine",
    "aa: A/A calibration self-tests",
    "integration: Integration tests (require external services)",
    "slow: Slow running tests",
]

[tool.black]
line-length = 100
target-version = ["py310"]
include = '\.pyi?$'
extend-exclude = '''
/(
  \.eggs
  | \.git
  | \.mypy_cache
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "clickhouse_driver.*",
    "orjson.*",
    "requests.*",
    "psycopg2.*",
    "pymysql.*",
    "scipy.*",
    "statsmodels.*",
]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long (handled by black)
    "B008", # do not perform function calls in argument defaults
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__.py
